@@ -43,16 +43,16 @@ master_doc = 'contents'
 
 # General information about the project.
 project = u'Assimulo'
-copyright = u'2013, Christian Andersson and Claus Führer'
+copyright = u'2016, Christian Andersson and Claus Führer'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = '2.4'
+version = '2.9'
 # The full version, including alpha/beta/rc tags.
-release = '2.4'
+release = '2.9'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -109,7 +109,7 @@ html_theme_path = ['../themes']
 
 # The name for this set of Sphinx documents.  If None, it defaults to
 # "<project> v<release> documentation".
-html_title = 'Assimulo 2.4 documentation'
+html_title = 'Assimulo 2.9 documentation'
 
 # A shorter title for the navigation bar.  Default is the same as html_title.
 #html_short_title = None
